--- a/Theo/gpu_essai_1.ipynb
+++ b/Theo/gpu_essai_1.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!pip install torch\n",
-    "#!pip install sklearn\n",
+    "!pip install sklearn\n",
     "import torch.nn as nn\n",
     "import sklearn\n",
     "import torch\n",
@@ -36,12 +36,13 @@
     "def select_sent(phrase,clss,k=3):\n",
     "    index_phrase=torch.topk(phrase,k)[1]\n",
     "    pred_phrase=torch.zeros(clss.shape)\n",
-    "    index_1=[[clss[k].tolist().index(int(index_phrase[k][i]))\n",
-    "              for i in range(len(index_phrase[k]))]\n",
-    "             for k in range(clss.shape[0])]\n",
-    "    index_2=[[i] for i in range(clss.shape[0])]\n",
+    "    index_1=[[clss[k].tolist().index(int(index_phrase[k][i])) \n",
+    "                for i in range(len(index_phrase[k])) if int(index_phrase[k][i]) in clss[k].tolist()]\n",
+    "                 for k in range(k)]\n",
+    "    index_2=[[i] for i in range(k)]\n",
     "    pred_phrase[index_2,index_1]=torch.ones(index_phrase.shape)\n",
     "    return pred_phrase\n",
+    "\n",
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "def confusion_output(sent,output,clss_index):\n",
@@ -51,6 +52,9 @@
     "    score_1=[(a[i][1][1])/3 for i in range(sent.shape[0])]\n",
     "    return score_total,score_1\n",
     "\n",
+    "def Loss(x):\n",
+    "    c=np.mean([i-1 for i in x])\n",
+    "    return c\n",
     "\n",
     "class Summarizer(nn.Module):\n",
     "    def __init__(self, device):#args, , load_pretrained_bert = False, bert_config = None):\n",
@@ -61,6 +65,7 @@
     "        #Bert(args.temp_dir, load_pretrained_bert, bert_config)\n",
     "        self.encoder = Classifier(self.bert.config.hidden_size)\n",
     "        self.select_sent=select_sent\n",
+    "        self.loss=nn.functional.binary_cross_entropy\n",
     "        # self.score=confusion_output\n",
     "        self.to(device)\n",
     "\n",
@@ -77,8 +82,18 @@
     "        sent_scores = self.encoder(top_vec.last_hidden_state).squeeze(-1)#, mask_cls\n",
     "        sent_scores_masked = torch.mul(sent_scores,mask_cls)\n",
     "        sent_scores_masked = self.select_sent(sent_scores_masked,clss,k=k)\n",
+    "        \n",
     "        # score=self.score(sent_scores,output)\n",
     "        return sent_scores_masked,sent_scores,top_vec.last_hidden_state#,score#, mask_cls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install transformers"
    ]
   },
   {
@@ -86,6 +101,15 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.dense.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.bias', 'lm_head.layer_norm.bias', 'lm_head.dense.weight']\n",
+      "- This IS expected if you are initializing CamembertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing CamembertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -98,8 +122,7 @@
     }
    ],
    "source": [
-    "#!pip install transformers\n",
-    "from transformers import CamembertModel,BertModel,RobertaModel\n",
+    "from transformers import CamembertModel,BertModel,RobertaModel,AdamW\n",
     "camem=CamembertModel.from_pretrained(\"camembert-base\")\n",
     "camem.config.hidden_size"
    ]
@@ -166,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +201,17 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.dense.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.bias', 'lm_head.layer_norm.bias', 'lm_head.dense.weight']\n",
+      "- This IS expected if you are initializing CamembertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing CamembertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device(\"cuda\")\n",
     "training_stats = []\n",
@@ -212,11 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clss[]"
+    "optimizer = AdamW(summa.parameters(),\n",
+    "                  lr = 2e-5, # Learning Rate\n",
+    "                  eps = 1e-8)# Epsilon\n",
+    "\n",
+    "# Pour enregistrer les stats a chaque epoque\n",
+    "training_stats = []\n",
+    "perte=torch.nn.L1Loss()"
    ]
   },
   {
@@ -235,18 +274,16 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "2 is not in list",
+     "evalue": "expected sequence of length 1 at dim 1 (got 3)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-bc22b3837951>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0;31m# On passe la donnee au model et on recupere la loss et le logits (sortie avant fonction d'activation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msumma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmask_cls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmask_cls\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0;31m# On incremente la loss totale\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-781deca143a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0;31m# On passe la donnee au model et on recupere la loss et le logits (sortie avant fonction d'activation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m         \u001b[0msortie\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msumma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmask_cls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmask_cls\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m         \u001b[0;31m#score,score_1=confusion_output()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mperte\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msortie\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    725\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    726\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 727\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    728\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    729\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-38a9ac442cba>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x, mask, mask_cls, clss, output, k)\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0msent_scores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast_hidden_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#, mask_cls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0msent_scores_masked\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent_scores\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmask_cls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0msent_scores_masked\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect_sent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent_scores_masked\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m         \u001b[0;31m# score=self.score(sent_scores,output)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msent_scores_masked\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msent_scores\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtop_vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast_hidden_state\u001b[0m\u001b[0;31m#,score#, mask_cls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-38a9ac442cba>\u001b[0m in \u001b[0;36mselect_sent\u001b[0;34m(phrase, clss, k)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mindex_phrase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtopk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphrase\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mpred_phrase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     index_1=[[clss[k].tolist().index(int(index_phrase[k][i]))\n\u001b[0m\u001b[1;32m     17\u001b[0m               for i in range(len(index_phrase[k]))]\n\u001b[1;32m     18\u001b[0m              for k in range(clss.shape[0])]\n",
-      "\u001b[0;32m<ipython-input-2-38a9ac442cba>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mindex_phrase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtopk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphrase\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mpred_phrase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     index_1=[[clss[k].tolist().index(int(index_phrase[k][i]))\n\u001b[0m\u001b[1;32m     17\u001b[0m               for i in range(len(index_phrase[k]))]\n\u001b[1;32m     18\u001b[0m              for k in range(clss.shape[0])]\n",
-      "\u001b[0;32m<ipython-input-2-38a9ac442cba>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mindex_phrase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtopk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphrase\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mpred_phrase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     index_1=[[clss[k].tolist().index(int(index_phrase[k][i]))\n\u001b[0m\u001b[1;32m     17\u001b[0m               for i in range(len(index_phrase[k]))]\n\u001b[1;32m     18\u001b[0m              for k in range(clss.shape[0])]\n",
-      "\u001b[0;31mValueError\u001b[0m: 2 is not in list"
+      "\u001b[0;32m<ipython-input-2-595d0b852888>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x, mask, mask_cls, clss, output, k)\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0msent_scores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast_hidden_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#, mask_cls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m         \u001b[0msent_scores_masked\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent_scores\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmask_cls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m         \u001b[0msent_scores_masked\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect_sent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent_scores_masked\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclss\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0;31m# score=self.score(sent_scores,output)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-595d0b852888>\u001b[0m in \u001b[0;36mselect_sent\u001b[0;34m(phrase, clss, k)\u001b[0m\n\u001b[1;32m     18\u001b[0m                  for k in range(k)]\n\u001b[1;32m     19\u001b[0m     \u001b[0mindex_2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mpred_phrase\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex_2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex_1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex_phrase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpred_phrase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: expected sequence of length 1 at dim 1 (got 3)"
      ]
     }
    ],
@@ -284,8 +321,9 @@
     "        summa.zero_grad()        \n",
     " \n",
     "        # On passe la donnee au model et on recupere la loss et le logits (sortie avant fonction d'activation)\n",
-    "        loss, logits = summa(x=input_id,mask=mask,clss=clss,mask_cls=mask_cls,output=output)\n",
-    " \n",
+    "        sortie = summa(x=input_id,mask=mask,clss=clss,mask_cls=mask_cls,output=output)\n",
+    "        #score,score_1=confusion_output()\n",
+    "        loss=perte(sortie[0],output)\n",
     "        # On incremente la loss totale\n",
     "        # .item() donne la valeur numerique de la loss\n",
     "        total_train_loss += loss.item()\n",
