--- a/Pipeline/Extraction_thesaurus/notebook editor for compute_Thesaurus_clean_1.ipynb
+++ b/Pipeline/Extraction_thesaurus/notebook editor for compute_Thesaurus_clean_1.ipynb
@@ -34,14 +34,26 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\n\n# Read recipe inputs\nthesaurus \u003d dataiku.Folder(\"el0cX6TX\")\nthesaurus_info \u003d thesaurus.get_info()\n\npath \u003d thesaurus.get_path()\nversions \u003d thesaurus.list_paths_in_partition()\nversion \u003d 1\nversions[version]"
+        "# -*- coding: utf-8 -*-\n",
+        "import dataiku\n",
+        "import pandas as pd, numpy as np\n",
+        "from dataiku import pandasutils as pdu\n",
+        "\n",
+        "# Read recipe inputs\n",
+        "thesaurus = dataiku.Folder(\"el0cX6TX\")\n",
+        "thesaurus_info = thesaurus.get_info()\n",
+        "\n",
+        "path = thesaurus.get_path()\n",
+        "versions = thesaurus.list_paths_in_partition()\n",
+        "version = 1\n",
+        "versions[version]"
       ],
       "outputs": [
         {
           "output_type": "execute_result",
           "metadata": {},
           "data": {
-            "text/plain": "\u0027/enjeux1.csv\u0027"
+            "text/plain": "'/enjeux1.csv'"
           },
           "execution_count": 98
         }
@@ -52,7 +64,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "enjeux \u003d pd.read_csv(open(path+versions[version]),encoding \u003d \u0027utf-8\u0027,delimiter\u003d\u0027;\u0027)"
+        "enjeux = pd.read_csv(open(path+versions[version]),encoding = 'utf-8',delimiter=';')"
       ],
       "outputs": []
     },
@@ -79,7 +91,20 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "final \u003d pd.DataFrame(enjeux[\u0027Enjeu environnemental\u0027])\nenjeux.replace(np.nan,0)\ndef itsplit(row,delimiter \u003d \u0027, \u0027):\n    try:\n        return (row.Dictionnaire.split(delimiter)+row.Correction.split(delimiter)+row.Extension.split(delimiter))\n    except:\n        try:\n            return (row.Dictionnaire.split(delimiter)+row.Correction.split(delimiter))\n        except:\n            try:\n                return (row.Dictionnaire.split(delimiter))\n            except:\n                print(row)\nfinal[\u0027Dictionnaire\u0027] \u003d enjeux.apply(itsplit,axis\u003d1)"
+        "final = pd.DataFrame(enjeux['Enjeu environnemental'])\n",
+        "enjeux.replace(np.nan,0)\n",
+        "def itsplit(row,delimiter = ', '):\n",
+        "    try:\n",
+        "        return (row.Dictionnaire.split(delimiter)+row.Correction.split(delimiter)+row.Extension.split(delimiter))\n",
+        "    except:\n",
+        "        try:\n",
+        "            return (row.Dictionnaire.split(delimiter)+row.Correction.split(delimiter))\n",
+        "        except:\n",
+        "            try:\n",
+        "                return (row.Dictionnaire.split(delimiter))\n",
+        "            except:\n",
+        "                print(row)\n",
+        "final['Dictionnaire'] = enjeux.apply(itsplit,axis=1)"
       ],
       "outputs": []
     },
@@ -95,7 +120,7 @@
           "output_type": "execute_result",
           "metadata": {},
           "data": {
-            "text/plain": "[\u0027biodiversité\u0027,\n \u0027milieu naturel\u0027,\n \u0027habitat naturel\u0027,\n \u0027faune\u0027,\n \u0027flore\u0027,\n \u0027trame verte et bleue (TVB)\u0027,\n \u0027trame noire\u0027,\n \u0027pollution lumineuse\u0027,\n \u0027réservoir biologique\u0027,\n \u0027continuité écologique\u0027,\n \u0027haie\u0027,\n \u0027boisement\u0027,\n \u0027prairie\u0027,\n \u0027bocage\u0027,\n \u0027milieu aquatique\u0027,\n \u0027cours d’eau\u0027,\n \u0027état écologique\u0027,\n \u0027pollution\u0027,\n \u0027débit réservé\u0027,\n \u0027zone humide\u0027,\n \u0027ZNIEFF\u0027,\n \u0027Natura 2000\u0027,\n \u0027espèce protégée\u0027,\n \u0027oiseaux\u0027,\n \u0027chauve-souris\u0027,\n \u0027avifaune\u0027,\n \u0027mammifères\u0027,\n \u0027poissons\u0027,\n \u0027insectes\u0027,\n \u0027herbier\u0027,\n \u0027trame vert bleu\u0027,\n \u0027tvb\u0027,\n \u0027debit reservir\u0027,\n \u0027espece protegee\u0027]"
+            "text/plain": "['biodiversité',\n 'milieu naturel',\n 'habitat naturel',\n 'faune',\n 'flore',\n 'trame verte et bleue (TVB)',\n 'trame noire',\n 'pollution lumineuse',\n 'réservoir biologique',\n 'continuité écologique',\n 'haie',\n 'boisement',\n 'prairie',\n 'bocage',\n 'milieu aquatique',\n 'cours d’eau',\n 'état écologique',\n 'pollution',\n 'débit réservé',\n 'zone humide',\n 'ZNIEFF',\n 'Natura 2000',\n 'espèce protégée',\n 'oiseaux',\n 'chauve-souris',\n 'avifaune',\n 'mammifères',\n 'poissons',\n 'insectes',\n 'herbier',\n 'trame vert bleu',\n 'tvb',\n 'debit reservir',\n 'espece protegee']"
           },
           "execution_count": 102
         }
@@ -106,7 +131,9 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import pickle\npath_clean \u003d dataiku.Folder(\u0027ywCWAV6b\u0027).get_path()\npickle.dump(enjeux,open(path_clean+\u0027/Thesaurus\u0027+str(version)+\u0027.pickle\u0027,\u0027wb\u0027))"
+        "import pickle\n",
+        "path_clean = dataiku.Folder('ywCWAV6b').get_path()\n",
+        "pickle.dump(enjeux,open(path_clean+'/Thesaurus'+str(version)+'.pickle','wb'))"
       ],
       "outputs": []
     }
