--- a/Theo/gpu_essai_1.ipynb
+++ b/Theo/gpu_essai_1.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#!pip install torch\n",
     "#!pip install sklearn\n",
@@ -13,6 +24,7 @@
     "import torch\n",
     "import pickle\n",
     "import os\n",
+    "from tqdm import tqdm\n",
     "from joblib import Parallel, delayed\n",
     "from torch.autograd import Variable\n",
     "from torch.utils.data import TensorDataset, DataLoader, RandomSampler, SequentialSampler\n",
@@ -122,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,8 +144,10 @@
     "        self.linear1 = nn.Linear(hidden_size, 1)\n",
     "        self.relu=nn.ReLU()\n",
     "\n",
-    "    def forward(self, x):#, mask_cls):\n",
+    "    def forward(self, x, mask_cls=None):\n",
     "        h = self.linear1(x).squeeze(-1)\n",
+    "        if mask_cls!=None:\n",
+    "            h=torch.mul(h,mask_cls)\n",
     "        sent_scores = self.relu(h) #* mask_cls.float()\n",
     "        return sent_scores\n",
     "\n",
@@ -145,8 +159,10 @@
     "        self.linear3 = nn.Linear(int(hidden_size/6),1)\n",
     "        self.Lrelu=nn.LeakyReLU(negative_slope= 0.01)\n",
     "\n",
-    "    def forward(self, x):#, mask_cls):\n",
+    "    def forward(self, x,mask_cls=None):#, mask_cls):\n",
     "        h = self.linear1(x).squeeze(-1)\n",
+    "        if mask_cls!=None:\n",
+    "            h=torch.mul(h,mask_cls)\n",
     "        h = self.Lrelu(h) #* mask_cls.float()\n",
     "        h = self.linear2(h)\n",
     "        h = self.Lrelu(h)\n",
@@ -163,10 +179,32 @@
     "        self.sigmoid = nn.Sigmoid()\n",
     "        self.LN=nn.LayerNorm(size)\n",
     "\n",
-    "    def forward(self, x):#, mask_cls):\n",
+    "    def forward(self, x, mask_cls=None):\n",
     "        h,weights = self.MHA(x,x,x)\n",
-    "        normalized_h=self.LN(h)     \n",
+    "        if mask_cls!=None:\n",
+    "            h=torch.mul(h,mask_cls)\n",
+    "        normalized_h=self.LN(h)\n",
     "        sent_scores = self.LReLu(normalized_h) #* mask_cls.float()\n",
+    "        return sent_scores    \n",
+    "class SMHA_Linear_classifier(nn.Module):\n",
+    "    def __init__(self, size,nhead,hidden_size):\n",
+    "        super(SMHA_Linear_classifier, self).__init__()\n",
+    "        self.MHA = nn.MultiheadAttention(size[1], nhead)\n",
+    "        self.LReLu=nn.LeakyReLU(negative_slope= 0.01)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "        self.LN=nn.LayerNorm(size)\n",
+    "        self.linear1 = nn.Linear(hidden_size, int(hidden_size/2))\n",
+    "        self.linear2 = nn.Linear(int(hidden_size/2),int(hidden_size/6))\n",
+    "\n",
+    "    def forward(self, x, mask_cls=None):\n",
+    "        h,weights = self.MHA(x,x,x)\n",
+    "        h=self.LN(h)\n",
+    "        h=self.linear1(h)\n",
+    "        h=self.LReLu(h)\n",
+    "        h=self.linear2(h)\n",
+    "        if mask_cls!=None:\n",
+    "            h=torch.mul(h,mask_cls)\n",
+    "        sent_scores = self.LReLu(h) #* mask_cls.float()\n",
     "        return sent_scores    \n",
     "    \n",
     "def select_sent(phrase,clss,K=3):\n",
@@ -235,12 +273,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Summarizer_2(nn.Module):\n",
-    "    def __init__(self, device,classif):#args, , load_pretrained_bert = False, bert_config = None):\n",
+    "    def __init__(self, device,classif,mul=False):#args, , load_pretrained_bert = False, bert_config = None):\n",
     "        super(Summarizer_2, self).__init__()\n",
     "        self.device = device\n",
     "#        self.bert =CamembertModel.from_pretrained(\"camembert-base\")\n",
@@ -251,12 +289,14 @@
     "        self.select_sent=select_sent\n",
     "        self.softmax=nn.Softmax()\n",
     "        self.attclassif=SMHA_classifier(torch.Size([512,768]),8)\n",
+    "        self.attlinear=SMHA_Linear_classifier(torch.Size([512,768]),8,768)\n",
     "        self.loss=nn.functional.binary_cross_entropy\n",
     "        self.classif_type=classif\n",
     "        # self.score=confusion_output\n",
     "        self.to(device)\n",
+    "        self.mul=mul\n",
     "\n",
-    "    def forward(self,topvec):#,clss,output,k=3):#,segs):#, sentence_range=None): #segs, \n",
+    "    def forward(self,top_vec,maks_cls=None):#,clss,output,k=3):#,segs):#, sentence_range=None): #segs, \n",
     "        #x input_ids\n",
     "        #Segs = Segment pour phrases (0 ou 1), marche pas dans un RoBERTa\n",
     "        #clss index du début des phrases \n",
@@ -266,13 +306,33 @@
     "\n",
     "        # sents_vec = top_vec[0][torch.arange(top_vec[0].size(0)).unsqueeze(1), clss]\n",
     "        # sents_vec = sents_vec * mask_cls[:, :, None].float()\n",
+    "        \n",
     "        if self.classif_type=='simple_linear':\n",
-    "            sent_scores = self.simple_classif(top_vec).squeeze(-1)#, mask_cls\n",
+    "            if self.mul==True:\n",
+    "                sent_scores = self.simple_classif(top_vec,mask_cls).squeeze(-1)#, mask_cls\n",
+    "            else:\n",
+    "                sent_scores = self.simple_classif(top_vec).squeeze(-1)#, mask_cls\n",
+    "        \n",
     "        elif self.classif_type=='multi_linear':\n",
-    "            sent_scores = self.multi_classif(top_vec).squeeze(-1)\n",
+    "            if self.mul==True:\n",
+    "                sent_scores = self.multi_classif(top_vec,mask_cls).squeeze(-1)\n",
+    "            else:\n",
+    "                sent_scores = self.multi_classif(top_vec).squeeze(-1)\n",
+    "\n",
     "        elif self.classif_type=='attention':\n",
-    "            sent_scores = self.attclassif(top_vec)\n",
-    "            sent_scores=sent_scores.mean(dim=2)\n",
+    "            if self.mul==True:\n",
+    "                sent_scores = self.attclassif(top_vec,mask_cls)\n",
+    "                sent_scores=sent_scores.mean(dim=2)\n",
+    "            else:\n",
+    "                sent_scores = self.attclassif(top_vec)\n",
+    "                sent_scores=sent_scores.mean(dim=2)\n",
+    "        elif self.classif_type=='attention_linear':\n",
+    "            if self.mul==True:\n",
+    "                sent_scores = self.attlinear(top_vec,mask_cls)\n",
+    "                sent_scores=sent_scores.mean(dim=2)\n",
+    "            else:\n",
+    "                sent_scores = self.attlinear(top_vec)\n",
+    "                sent_scores=sent_scores.mean(dim=2)\n",
     "        else:\n",
     "            raise ValueError(\"Attention, veuillez bien spécifier un type de classifieur.\\nSeules les valeurs 'simple_linear', 'multi_linear' ou 'attention' sont acceptées.\")\n",
     "        #sent_scores_masked = torch.mul(sent_scores,mask_cls)\n",
@@ -308,7 +368,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.decoder.weight', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.layer_norm.bias', 'lm_head.dense.bias']\n",
+      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.dense.weight', 'lm_head.layer_norm.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.bias', 'lm_head.dense.bias']\n",
       "- This IS expected if you are initializing CamembertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing CamembertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -441,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +595,7 @@
     "                    w[sha[k],x_2[x_1[k]:]]=self.weights[1]\n",
     "                    \n",
     "        w=w.to(device_yhat)\n",
-    "        y_diff=torch.sub(y,y_hat)\n",
+    "        y_diff=torch.abs(torch.sub(y,y_hat))\n",
     "        y_diff_pond=torch.mul(y_diff,w)\n",
     "        sum_y_diff_pon=torch.div(torch.sum(y_diff_pond),y_hat.shape[0])\n",
     "        return Variable(sum_y_diff_pon,requires_grad=True)\n",
@@ -756,26 +816,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32\n"
+      "16\n"
      ]
     }
    ],
    "source": [
-    "K=10000\n",
+    "output_=torch.stack([train_dataset[i][-1] for i in range(len(train_dataset))])\n",
+    "mask_cls_=torch.stack([train_dataset[i][-2] for i in range(len(train_dataset))])\n",
+    "output_2=torch.mul(torch.div(output_-torch.min(output_),torch.max(output_)-torch.min(output_)),mask_cls_)\n",
+    "output_2\n",
+    "\n",
+    "K=2000\n",
     "train_2=TensorDataset(torch.stack([train_dataset[i][0] for i in range(K)]),\n",
     "                      torch.stack([train_dataset[i][1] for i in range(K)]),\n",
     "                      torch.stack([train_dataset[i][2] for i in range(K)]),\n",
     "                      torch.stack([train_dataset[i][3] for i in range(K)]),\n",
-    "                      torch.stack([train_dataset[i][4] for i in range(K)]))\n",
+    "                      output_2[:K])\n",
     "\n",
-    "batch_size=int(1024/8/4)\n",
+    "batch_size=int(1024/8/8)\n",
     "print(batch_size)\n",
     "\n",
     "dataloader_2 = DataLoader(\n",
@@ -824,14 +889,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "training_stats = []\n",
     "epochs=5\n",
     "\n",
-    "summa=Summarizer_2(device=device,classif='simple_linear')\n",
+    "summa=Summarizer_2(device=device,classif='attention_linear')\n",
     "summa_parallel=nn.DataParallel(summa) # On va distribuer sur plusieurs GPU, 2 ici pour avoir plus de mémoire\n",
     "\n",
     "optimizer = AdamW(summa_parallel.parameters(),\n",
@@ -859,7 +924,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/125 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "########## Epoch 1 / 5 ##########\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-76-34ca28d4352e>:30: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  w=torch.repeat_interleave(torch.tensor(self.weights[0]),y.shape[1])\n",
+      "<ipython-input-76-34ca28d4352e>:72: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  w=torch.repeat_interleave(torch.tensor(self.weights[0]),y.shape[1])\n",
+      " 26%|██▋       | 33/125 [01:16<03:36,  2.35s/it]"
+     ]
+    }
+   ],
    "source": [
     "#Pour enregistrer les informations de l'entraînement\n",
     "training_stats = []\n",
@@ -887,17 +978,17 @@
     "    summa_parallel.train()\n",
     " \n",
     "    # Pour chaque batch\n",
-    "    for step, batch in enumerate(data):\n",
+    "    for step, batch in enumerate(tqdm(data)):\n",
     " \n",
     "        # On fait un print chaque 40 batchs\n",
-    "        if step % 150 == 0 and not step == 0:\n",
-    "            print(f'  Batch {step}  of {len(data)}.')\n",
+    "      # if step % 150 == 0 and not step == 0:\n",
+    "       #     print(f'  Batch {step}  of {len(data)}.')\n",
     "         \n",
     "        # On recupere les donnees du batch\n",
-    "        input_id = batch[0]\n",
-    "        mask = batch[1]\n",
+    "        input_id = batch[0]#.to(device)\n",
+    "        mask = batch[1]#.to(device)\n",
     "        clss = batch[2].float().to(device)\n",
-    "        mask_cls=batch[3].to(device)\n",
+    "        mask_cls=batch[3]#.to(device)\n",
     "        output=batch[4].float().to(device)\n",
     " \n",
     "        # On met le gradient a 0\n",
@@ -905,7 +996,8 @@
     " \n",
     "        # On passe la donnee au model et on recupere la loss et le logits (sortie avant fonction d'activation)\n",
     "        topvec=camem(input_id,mask)\n",
-    "        topvec=topvec.last_hidden_state.to(device)\n",
+    "        topvec=topvec.last_hidden_state\n",
+    "        topvec=topvec.mul(mask_cls.unsqueeze(2)).to(device)\n",
     "        sortie = summa_parallel(topvec)\n",
     "        #(x=input_id,mask=mask,mask_cls=mask_cls)#,clss=clss,output=output)\n",
     "        \n",
@@ -927,11 +1019,11 @@
     "        total_train_loss_3 += loss_train_3.item()\n",
     "\n",
     "        # Backpropagtion\n",
-    "        loss_train.backward()\n",
+    "        loss_train_3.backward()\n",
     " \n",
     "        # On actualise les paramètres grace a l'optimizer\n",
     "        optimizer.step()\n",
-    "    score_stat.append(score_e/len(data))\n",
+    "    score_stat=score_e/len(data)\n",
     "    # On calcule la  loss moyenne sur toute l'epoque\n",
     "    avg_train_loss = total_train_loss / len(data)   \n",
     "    avg_train_loss_2 = total_train_loss_2 / len(data)   \n",
@@ -940,7 +1032,7 @@
     "    print(\"\")\n",
     "    print(\"  Average training loss MSE: {0:.4f}\".format(avg_train_loss),\n",
     "         \"  Average training loss L1: {0:.4f}\".format(avg_train_loss_2),\n",
-    "         \"  Average training loss sum: {0:.4f}\".format(avg_train_loss_3))  \n",
+    "         \"  Average training loss sum: {0:.4f}\".format(avg_train_loss_3),\"  Average f1 score: {0:.4f}\".format(score_stat))  \n",
     "     \n",
     "    # Enregistrement des stats de l'epoque\n",
     "    training_stats.append(\n",
