suppression du dossier d'exemple

--- a/Theo/BERT_Score.ipynb
+++ b/Theo/BERT_Score.ipynb
@@ -20,7 +20,7 @@
     "import time\n",
     "import pickle\n",
     "from pathlib import Path\n",
-    "!pip install gensim\n",
+    "# !pip install gensim\n",
     "import gensim\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "!pip install torch\n",
+    "# !pip install torch\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from tqdm import tqdm"
