Mise à jour entraînement et données DL

--- a/Theo/test_dl.ipynb
+++ b/Theo/test_dl.ipynb
@@ -71,13 +71,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre de batchs : 2129\n",
+      "Nombre de batchs : 2095\n",
       "Taille du batch : 64\n"
      ]
     }
    ],
    "source": [
-    "dataloader_2=pickle.load(open('train_loader_1.pickle','rb'))\n",
+    "dataloader_2=pickle.load(open('train_loader_2.pickle','rb'))\n",
     "print(\"Nombre de batchs :\",len(dataloader_2))\n",
     "for _,batch in enumerate(dataloader_2):\n",
     "    print(\"Taille du batch :\",len(batch[0]))\n",
@@ -214,8 +214,8 @@
     "                    w[sha[k],x_2[x_1[k]:]]=self.weights[1]\n",
     "               \n",
     "        sum_weights=w.sum()\n",
-    "        w=w.to(device)\n",
-    "        sum_weights=sum_weights.to(device)\n",
+    "        w=w.to(device_yhat)\n",
+    "        sum_weights=sum_weights.to(device_yhat)\n",
     "        errors=torch.sub(y,y_hat)\n",
     "        errors=torch.abs(errors)\n",
     "        weighted_errors=torch.mul(w,errors)\n",
@@ -292,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias', 'lm_head.bias']\n",
+      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.dense.bias', 'lm_head.bias', 'lm_head.layer_norm.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.dense.weight']\n",
       "- This IS expected if you are initializing CamembertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing CamembertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -577,22 +577,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "6a290401-70b2-438f-812f-bbfbf66fe4cd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import gc\n",
     "def check_weights_update(model,loss,optim,dev=False):\n",
     "    param1=list(model.parameters())[0].clone()\n",
     "    input=torch.rand(torch.Size([3,512,768]))\n",
@@ -601,7 +591,7 @@
     "    if dev:\n",
     "        input=input.to(torch.device('cuda'))\n",
     "        target=target.to(torch.device('cuda'))\n",
-    "                       \n",
+    "    \n",
     "    sortie=model(input)\n",
     "    optim.zero_grad()\n",
     "    ouais=loss(sortie,target)\n",
@@ -609,76 +599,22 @@
     "    optim.step()\n",
     "    param=list(model.parameters())[0].clone()\n",
     "    out=bool(1-torch.equal(param1.data,param.data))\n",
+    "    del input,target,sortie,ouais\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()\n",
     "    return out\n",
-    "\n",
-    "model.train()\n",
-    "check_weights_update(model,loss,optimizer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f09262f-4af7-4b38-910c-5f1a3e13ee58",
-   "metadata": {},
-   "source": [
-    "## Définition des modèles et fonction de perte et entraînement"
+    "#check_weights_update(Models[0],Loss[0],Optimizers[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9405dff0-7d2f-4e81-a965-6fde2a84bf2c",
+   "execution_count": null,
+   "id": "48b15252-e70b-4293-bfaf-e3a41c158b53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mlc=Multi_Linear_Classifier(camem2.config.hidden_size)\n",
-    "#mlc_optimizer_SGD=optim.SGD(mlc.parameters(), lr=0.001, momentum=0.09)\n",
-    "#mlc_optimizer_Adam=optim.AdamW(convnet.parameters(), lr=0.009, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01)\n",
-    "\n",
-    "#slc=Simple_Classifier(camem2.config.hidden_size)\n",
-    "#slc_optimizer=optim.AdamW(slc.parameters(), lr=0.001, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01)\n",
-    "#SGD(slc.parameters(), lr=0.001, momentum=0.09)\n",
-    "\n",
-    "#att_c=SMHA_classifier(torch.Size([512,768]),8)\n",
-    "#att_c_optimizer=optim.SGD(att_c.parameters(), lr=0.001, momentum=0.09)\n",
-    "\n",
-    "att_lin_c=SMHA_Linear_classifier(torch.Size([512,768]),8,768)\n",
-    "att_lin_c_optimizer=optim.AdamW(att_lin_c.parameters(), lr=0.0009, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01)\n",
-    "#SGD(att_lin_c.parameters(), lr=0.001, momentum=0.09)\n",
-    "\n",
-    "#convnet=Net(2**8,2**6,2,2,2,2)\n",
-    "#convnet_optimizer=optim.AdamW(convnet.parameters(), lr=0.0005, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01)\n",
-    "#SGD(convnet.parameters(), lr=0.001, momentum=0.09)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "54f4d14f-33dd-457a-92ba-c0a01c5fc388",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([  1.1563, 256.0000])\n"
-     ]
-    }
-   ],
-   "source": [
-    "score=F1_score()\n",
-    "\n",
-    "alpha=0.1\n",
-    "weights=torch.Tensor([(1/(1-alpha))*1/((512-20)/512),(1/alpha)*1/((20)/512)])\n",
-    "#weights=torch.Tensor([(1/(1-alpha))*1/((1)/512),(1/alpha)*1/((512-1)/512)])\n",
-    "#weights=torch.Tensor([1,1])\n",
-    "print(weights)\n",
-    "loss_3=Weighted_Loss(weight=weights,loss_type='sum',binary=False)\n",
-    "loss_2=Weighted_Loss(weight=weights,loss_type='L1',binary=False)\n",
-    "loss=nn.MSELoss()#nn.L1Loss()\n",
-    "epochs=5\n",
-    "model=att_lin_c\n",
-    "optimizer=att_lin_c_optimizer\n",
-    "data=dataloader_2"
+    "model.train()\n",
+    "check_weights_update(model,loss,optimizer)"
    ]
   },
   {
@@ -700,32 +636,76 @@
     "del slc\n",
     "import gc\n",
     "gc.collect()\n",
-    "torch.cuda.empty_cache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "9de7d948-db09-43c3-be5a-a90fa0ef6caf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "torch.cuda.empty_cache()\n",
+    "\n",
     "t = torch.cuda.get_device_properties(0).total_memory\n",
     "r = torch.cuda.memory_reserved(0) \n",
     "a = torch.cuda.memory_allocated(0)\n",
     "f = r-a  # free inside reserved\n",
     "r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f09262f-4af7-4b38-910c-5f1a3e13ee58",
+   "metadata": {},
+   "source": [
+    "## Définition des modèles et fonction de perte et entraînement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9405dff0-7d2f-4e81-a965-6fde2a84bf2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([  1.1563, 256.0000])\n",
+      "True True True\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlc=Multi_Linear_Classifier(camem2.config.hidden_size)\n",
+    "#mlc_optimizer_SGD=optim.SGD(mlc.parameters(), lr=0.001, momentum=0.09)\n",
+    "\n",
+    "#slc=Simple_Classifier(camem2.config.hidden_size)\n",
+    "#slc_optimizer=optim.AdamW(slc.parameters(), lr=0.001, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01)\n",
+    "#SGD(slc.parameters(), lr=0.001, momentum=0.09)\n",
+    "\n",
+    "#att_c=SMHA_classifier(torch.Size([512,768]),8)\n",
+    "#att_c_optimizer=optim.SGD(att_c.parameters(), lr=0.001, momentum=0.09)\n",
+    "\n",
+    "#att_lin_c=SMHA_Linear_classifier(torch.Size([512,768]),8,768)\n",
+    "#att_lin_c_optimizer=optim.AdamW(att_lin_c.parameters(), lr=0.0009, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01)\n",
+    "#SGD(att_lin_c.parameters(), lr=0.001, momentum=0.09)\n",
+    "\n",
+    "#convnet=Net(2**8,2**6,2,2,2,2)\n",
+    "#convnet_optimizer=optim.AdamW(convnet.parameters(), lr=0.0005, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01)\n",
+    "#SGD(convnet.parameters(), lr=0.001, momentum=0.09)\n",
+    "\n",
+    "score=F1_score()\n",
+    "\n",
+    "alpha=0.1\n",
+    "weights=torch.Tensor([(1/(1-alpha))*1/((512-20)/512),(1/alpha)*1/((20)/512)])\n",
+    "#weights=torch.Tensor([(1/(1-alpha))*1/((1)/512),(1/alpha)*1/((512-1)/512)])\n",
+    "#weights=torch.Tensor([1,1])\n",
+    "print(weights)\n",
+    "loss_3=Weighted_Loss(weight=weights,loss_type='sum',binary=False)\n",
+    "loss_2=Weighted_Loss(weight=weights,loss_type='L1',binary=False)\n",
+    "loss=nn.MSELoss()#nn.L1Loss()\n",
+    "epochs=10\n",
+    "model=mlc.to(device)\n",
+    "#model\n",
+    "mlc_optimizer_Adam=optim.AdamW(model.parameters(), lr=0.009, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01)\n",
+    "optimizer=mlc_optimizer_Adam\n",
+    "data=dataloader_2\n",
+    "\n",
+    "model.train()\n",
+    "print(check_weights_update(model,loss,optimizer,dev=True),check_weights_update(model,loss_2,optimizer,dev=True),check_weights_update(model,loss_3,optimizer,dev=True))"
    ]
   },
   {
@@ -738,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "821da874-faf5-4707-81da-8a7c68c3a9e9",
    "metadata": {},
    "outputs": [
@@ -748,7 +728,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e7630f0d-383a-4144-a490-18ab70857320",
    "metadata": {},
    "outputs": [
@@ -776,105 +756,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/2129 [00:00<?, ?it/s]"
+      "  0%|          | 0/2095 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entraînement du modèle : SMHA_Linear_classifier\n"
+      "Entraînement du modèle : Multi_Linear_Classifier\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2129/2129 [6:15:01<00:00, 10.57s/it]  \n",
-      "  0%|          | 0/2129 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Average training loss MSE: 22.8509 \n",
-      "Average training loss L1: 4.7288 \n",
-      "Average training loss sum: 21516.4456 \n",
-      "Average f1 score: 0.0024 \n",
-      "Average precision score: 0.0012\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2129/2129 [5:59:02<00:00, 10.12s/it]  \n",
-      "  0%|          | 0/2129 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Average training loss MSE: 20.5247 \n",
-      "Average training loss L1: 4.4878 \n",
-      "Average training loss sum: 20420.6933 \n",
-      "Average f1 score: 0.0024 \n",
-      "Average precision score: 0.0012\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|███▉      | 843/2129 [2:17:44<3:28:58,  9.75s/it]IOPub message rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "100%|██████████| 2129/2129 [5:29:40<00:00,  9.29s/it]  \n",
-      "  0%|          | 0/2129 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Average training loss MSE: 16.2684 \n",
-      "Average training loss L1: 3.9917 \n",
-      "Average training loss sum: 18164.0702 \n",
-      "Average f1 score: 0.0024 \n",
-      "Average precision score: 0.0012\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2129/2129 [5:18:40<00:00,  8.98s/it]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Average training loss MSE: 14.4830 \n",
-      "Average training loss L1: 3.7645 \n",
-      "Average training loss sum: 17129.0096 \n",
-      "Average f1 score: 0.0024 \n",
-      "Average precision score: 0.0012\n",
-      "L'entraînement a duré : 1725.88 minutes.\n",
-      "Model saved!\n"
+      " 32%|███▏      | 661/2095 [1:45:54<3:44:25,  9.39s/it]"
      ]
     }
    ],
@@ -888,8 +784,8 @@
     "\n",
     "# Boucle d'entrainement\n",
     "camem2.to('cpu')\n",
-    "model.train()\n",
-    "model.to(device)\n",
+    "#model.train()\n",
+    "#model.to(device)\n",
     "model.zero_grad()\n",
     "print(\"Entraînement du modèle :\",str(model).split('(')[0])\n",
     "start=time.time()\n",
@@ -989,50 +885,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cc2ea742-e80d-4088-b98b-a5e4b19c11c2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'epoch': 1,\n",
-       "  'Training Loss MSE': 5.275006221907415,\n",
-       "  'Training Loss L1': 2.2562280637717347,\n",
-       "  'Training Loss sum': 10265.907331259725,\n",
-       "  'Training f1 score': 0.0024033630397035173,\n",
-       "  'Training precision score': 0.0012031366530849132},\n",
-       " {'epoch': 2,\n",
-       "  'Training Loss MSE': 4.732451350658698,\n",
-       "  'Training Loss L1': 2.136481521834001,\n",
-       "  'Training Loss sum': 9722.606619158056,\n",
-       "  'Training f1 score': 0.0024035109723548496,\n",
-       "  'Training precision score': 0.0012032107961387714},\n",
-       " {'epoch': 3,\n",
-       "  'Training Loss MSE': 4.2200414744718024,\n",
-       "  'Training Loss L1': 2.0157179058074055,\n",
-       "  'Training Loss sum': 9171.66262953558,\n",
-       "  'Training f1 score': 0.0024033529597989422,\n",
-       "  'Training precision score': 0.0012031318886415966},\n",
-       " {'epoch': 4,\n",
-       "  'Training Loss MSE': 3.7630395409981374,\n",
-       "  'Training Loss L1': 1.9016073672857683,\n",
-       "  'Training Loss sum': 8653.433304083857,\n",
-       "  'Training f1 score': 0.002404237652596431,\n",
-       "  'Training precision score': 0.0012035755245765245},\n",
-       " {'epoch': 5,\n",
-       "  'Training Loss MSE': 3.3556519424820124,\n",
-       "  'Training Loss L1': 1.7939630600699465,\n",
-       "  'Training Loss sum': 8163.151421313557,\n",
-       "  'Training f1 score': 0.0024040668555712543,\n",
-       "  'Training precision score': 0.0012034893230770873}]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "training_stats"
    ]
